<resources>
    <string name="app_name">bankApplication_Kotlin</string>
    //-----------로그인 화면 관련 텍스트
    <string name="login">로그인</string>
    <string name="ID">ID</string>
    <string name="ID_hint">아이디를 입력해주세요.</string>
    <string name="Password">Password</string>
    <string name="Password_hint">비밀번호를 입력해주세요.</string>
    <string name="ID_save">아이디 저장</string>
    <string name="found_password">비밀번호 찾기</string>
    <string name="register">회원가입</string>
    //------------회원가입 ID 페이지 관련 텍스트---------------
    <string name="register_id_text1">아이디를 입력해주세요:)</string>
    <string name="register_id_text2">회원가입에 필요합니다.</string>
    <string name="register_id_text3">사용하실 아이디를 입력해주세요.</string>
    <string name="register_id_text4">대소문자,숫자 특수문자(!,?)을 사용한 6-12글자만 가능합니다.</string>
    <string name="register_id_text5">계 속</string>
    //------------회원가입 Email 페이지 관련 텍스트-------------
    <string name="register_email_text1">이메일을 입력해주세요:)</string>
    <string name="register_email_text2">이메일 아이디</string>
    <string name="register_email_text3">이메일 직접 입력</string>
    //------------회원가입 Info 페이지 관련 텍스트--------------
    <string name="register_info_text1">해당 정보를 입력해주세요 :)</string>
    <string name="register_info_text2">이름</string>
    <string name="register_info_text3">남</string>
    <string name="register_info_text4">여</string>
    <string name="register_info_text5">생년월일</string>
    <string name="register_info_text6">생년월일 변경</string>
    <string name="register_info_text7">개인정보 사용 동의</string>
    //------------회원가입 PW 페이지 관련 텍스트----------------
    <string name="register_pw_text1">비밀번호를 입력해주세요 :)</string>
    <string name="register_pw_text2">1번만 입력하니 정확히 입력해주세요!</string>
    <string name="register_pw_text3">대소문자,숫자,특수문자(!,?)을 사용한 8\-20글자만 가능합니다.</string>
    <string name="register_pw_text4">비밀번호 보기</string>
    //-----------계정 찾기 관련 텍스트-----------------
    <string name="found_pw">비밀번호 찾기</string>
    <string name="found_id">아이디 찾기</string>
    <string name="email">이메일</string>
    <string name="found">찾 기</string>
    <string name="email_hint">Ex) HoonGilDong@google.com</string>
    <string name="found_pw_text1">정보를 입력해주세요 :)</string>
    <string name="found_id_text1">아이디 찾기에 필요합니다.</string>
    <string name="found_id_text2">이름을 입력해주세요.</string>
    <string name="found_id_text3">생년월일을 입력해주세요.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    //------------Home Fragment 관련 텍스트----------
    <string name="home_fragment_text1">님 어서오세요.</string>
    <string name="home_fragment_text2">주 계좌정보</string>
    <string name="balance">잔 액</string>
    <string name="won">원</string>
    <string name="transactionHistory">거래 내역</string>
    <string name="remittance">송금</string>
    <string name="percent">%</string>
    <string name="per_month">월 기준</string>
    //------------financial Fragment 관련 텍스트--------------
    <string name="deposit">예·적금</string>
    <string name="fund">펀드</string>
    <string name="loan">대출</string>
    <string name="annual_interest_rate">연 이자</string>
    //-----------myBank Fragment 관련 텍스트---------------
    <string name="myBank">MY뱅크</string>
    <string name="sir">님</string>
    <string name="greeting">오늘도 행복한 하루가 되세요! :D</string>
    <string name="profile_show">내 정보 보기 ></string>
    <string name="remittance_limit_check">송금한도 확인</string>
    <string name="remittance_limit_check_introduce">현재 송금한도를 확인하실 수 있습니다.</string>
    //----------myAsset Fragment 관련 텍스트-------------
    <string name="myAsset">MY자산</string>
    <string name="client_sir">고객님이</string>
    <string name="myAsset_introduce">보유하고 계신 자산입니다.</string>
    <string name="transactionService">입출금</string>
    <string name="myAsset_total_introduce">님의 순자산은</string>
    //---------Remittance Activity, Fragment 관련 텍스트-----------
    <string name="addressInfo">계좌정보</string>
    <string name="amount">금액</string>
    <string name="complete">완 료</string>
    <string name="enableRemittance">출금가능 금액</string>
    <string name="limitRemittance">1일 송금 잔여한도</string>
    <string name="addressRemittance">계좌번호 송금</string>
    <string name="emailRemittance">이메일 송금</string>
    <string name="receiver">수신인</string>
    <string name="sender">송신인</string>
    <string name="receiverAddress">수신 계좌</string>
    <string name="receiverAlias">받는통장표시</string>
    <string name="confirm">확 인</string>
    <string name="receiverEmail">받는 분 이메일</string>
    <string name="remittance_email_hint">받는 분 이메일을 정확히 입력해주세요.</string>
    <string name="receiverName">받는 분 이름</string>
    <string name="remittance_email_introduce1">※ 받는 분 이메일과 이름이 일치해야 상대방이 송금된 금액을 받을 수 있습니다.</string>
    <string name="remittance_email_introduce2">※ 받는 분 이름을 정확하게 명시해주어야 합니다.</string>
    <string name="remittance_email_introduce3">※ 해당하는 이메일에 주 계좌번호로 전송됩니다.\n\n 자신의 다른 계좌로 전송할 수 없습니다.</string>
    <string name="remittance_check_introduce1">※수신인을 정확히 확인하시길 바랍니다.</string>
    <string name="remittance_pw_introduce">※비밀번호 정확히 입력해주세요.</string>
    <string name="remittance_amount_hint">금액 입력</string>
    <string name="remittance_plus_10000">+1만</string>
    <string name="remittance_plus_50000">+5만</string>
    <string name="remittance_plus_100000">+10만</string>
    <string name="remittance_plus_1000000">+100만</string>
    <string name="remittance_complete">송금 완료</string>
    <string name="remittance_pw_input">비밀번호 입력</string>
    //---------Remittance History 관련 텍스트-------------
    <string name="remittance_history_curMoney">잔 액</string>

</resources>