<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="viewModel"
            type="com.example.bankApplication_kotlin.viewModel.FoundIDViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background_img">
        <ImageButton
            android:id="@+id/register_info_backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.backClick()}"
            android:backgroundTint="@color/main_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_space_img" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/login_font"
            android:text="@string/found_id"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/register_info_backButton"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/found_pw_text1"
            android:fontFamily="@font/login_font"
            android:textSize="30sp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.33" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/login_font"
            android:text="@string/found_id_text1"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:text="@string/register_info_text2"
            android:textColor="@color/black"
            android:fontFamily="@font/login_font"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:paddingLeft="10dp"
            android:inputType="textPersonName"
            android:text="@={viewModel.name}"
            android:fontFamily="@font/login_font"
            android:background="@drawable/login_edit_button_border"
            android:hint="@string/found_id_text2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/login_font"
            android:text="@string/register_info_text5"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:maxLength="8"
            android:text="@={viewModel.birth}"
            android:hint="@string/found_id_text3"
            android:fontFamily="@font/login_font"
            android:background="@drawable/login_edit_button_border"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <Button
            android:id="@+id/button8"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:onClick="@{()->viewModel.foundClick()}"
            android:text="@string/found"
            android:textSize="20sp"
            android:fontFamily="@font/login_font"
            android:backgroundTint="@color/backgroundTransparency"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="@color/white"
            app:strokeWidth="3dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
