<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="100">
        <TextView
            android:id="@+id/financial_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:fontFamily="@font/login_font"
            android:textSize="24sp"
            android:padding="15dp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:fontFamily="@font/login_font"
            android:gravity="right|bottom"
            android:textColor="@color/main_color"
            android:textSize="20sp"
            android:text="@string/annual_interest_rate"/>
        <TextView
            android:id="@+id/financial_rate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="17"
            android:fontFamily="@font/login_font"
            android:gravity="center|bottom"
            android:textSize="20sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="13"
            android:gravity="left|bottom"
            android:fontFamily="@font/login_font"
            android:textSize="20sp"
            android:textColor="@color/main_color"
            android:text="@string/percent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="100">
        <TextView
            android:id="@+id/financial_description"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="65"
            android:padding="15dp"
            android:fontFamily="@font/login_font"
            android:textSize="15sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/financial_perMonth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:fontFamily="@font/login_font"
            android:gravity="right"
            android:textSize="15sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:fontFamily="@font/login_font"
            android:paddingLeft="5dp"
            android:textSize="15sp"
            android:textColor="@color/main_color"
            android:text="@string/per_month"/>
    </LinearLayout>
</LinearLayout>